# stonks.rs

./: CNAME  Cargo.toml  README.md  index.html
src/: app.rs  events.rs  gradient_widget.rs  macros.rs  main.rs  memes.rs  opts.rs  sockets.rs  tui.rs  utils.rs
web/: package-lock.json  package.json
web/src/: app.tsx  index.css
web/src/comps/: content.tsx
